--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convite de Jantar</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
         <p id="resposta"></p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
