--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="container">
         <h1>Convite de Jantar</h1>
-        <p>Querida [Nome da sua namorada],</p>
-        <p>Você está oficialmente convidada para um jantar especial comigo!</p>
+        <p>Querida Ana Carolina Vasconcellos Coelho (Vida!).</p>
+        <p>Você está oficialmente convidada para um jantar especial</p>
+        <p>De quatro anos de namoro com o seu marido!</p>
+        <p>Loal: Splêndido</p>
         <label for="data">Escolha a data do jantar:</label>
         <select id="data">
             <option value="21/02">21 de fevereiro</option>
@@ -21,6 +23,8 @@
         <button onclick="responderConvite()">Enviar Resposta</button>
         <p id="resposta"></p>
     </div>
+
+    <div id="coracao" class="coracao-vazio"></div>
 
     <script src="JS/script.js"></script>
 </body>
