--- a/index.html
+++ b/index.html
@@ -8,20 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Convite de Jantar</h1>
-        <p>Querida Ana Carolina Vasconcellos Coelho (Vida!).</p>
-        <p>Você está oficialmente convidada para um jantar especial</p>
-        <p>De quatro anos de namoro com o seu marido!</p>
-        <p>Loal: Splêndido</p>
-        <label for="data">Escolha a data do jantar:</label>
-        <select id="data">
-            <option value="21/02">21 de fevereiro</option>
-            <option value="22/02">22 de fevereiro</option>
-            <option value="23/02">23 de fevereiro</option>
-            <option value="24/02">24 de fevereiro</option>
-        </select>
-        <button onclick="responderConvite()">Enviar Resposta</button>
-        <p id="resposta"></p>
+        <h1>Um Texto para o meu grande amor!</h1>
+        <p>Hoje dia 21/02/2024, celebramos não apenas quatro anos de amor, mas quatro anos de uma jornada que tem sido a mais bela e significativa da minha vida. Desde o momento em que te beijei a primeira vez e nossos caminhos se cruzaram, o meu mundo se iluminou de uma maneira que eu nunca imaginei possível. Cada risada compartilhada, cada abraço apertado e cada momento de carinho reforçam que você é o meu grande amor.
+
+        </p>
+        <p>Nesses quatro anos, crescemos juntos, aprendemos juntos e amadurecemos juntos. Cada desafio que enfrentamos só fortaleceu nosso amor e nossa cumplicidade. Você é minha fonte de inspiração, minha âncora e minha luz nos dias sombrios.
+        </p>
+        <p>Hoje, no nosso aniversário, quero renovar meu compromisso de fazer você feliz, de cuidar e de amá-la incondicionalmente pra sempre, nossa frase "Eu te amo infinito" nunca fez tanto sentido! Com certeza seremos um casal feliz eternamente.</p>
+        <p></p>
     </div>
 
     <div id="coracao" class="coracao-vazio"></div>
